force-app/main/default/objects/Pricing_Component__c/Pricing_Component__c.object-meta.xml
<CustomObject>
    <label>Pricing Component</label>
    <nameField>
        <displayFormat>PC-{YY}-{00000}</displayFormat>
        <label>Pricing Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>