force-app/main/default/objects/Pricing_Component__c/fields/Area_Basis__c.field-meta.xml
<CustomField>
    <fullName>Area_Basis__c</fullName>
    <label>Area Basis</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>