force-app/main/default/objects/Pricing_Component__c/fields/Base_Ref_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Ref_Amount__c</fullName>
    <label>Base Reference Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>