force-app/main/default/objects/Pricing_Component__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Pricing Components</relationshipLabel>
    <relationshipName>Pricing_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>