force-app/main/default/objects/Pricing_Component__c/fields/Calculation_Basis__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Basis__c</fullName>
    <label>Calculation Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Per sq ft</fullName><default>false</default><label>Per sq ft</label></value>
            <value><fullName>Percentage</fullName><default>false</default><label>Percentage</label></value>
            <value><fullName>Fixed</fullName><default>false</default><label>Fixed</label></value>
            <value><fullName>Percentage of BSP+PLC</fullName><default>false</default><label>Percentage of BSP+PLC</label></value>
            <value><fullName>Percentage of Agreement Value</fullName><default>false</default><label>Percentage of Agreement Value</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>