force-app/main/default/objects/Pricing_Component__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <label>Component Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>