force-app/main/default/objects/Pricing_Component__c/fields/GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>GST_Amount__c</fullName>
    <formula>Line_Amount__c * GST_Rate__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>