force-app/main/default/objects/Pricing_Component__c/fields/GST_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_Rate__c</fullName>
    <label>GST Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>