force-app/main/default/objects/Pricing_Component__c/fields/Line_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Amount__c</fullName>
    <formula>CASE(TEXT(Calculation_Basis__c),
  &quot;Per sq ft&quot;, Rate__c * Area_Basis__c,
  &quot;Percentage&quot;, Rate__c * Base_Ref_Amount__c / 100,
  &quot;Fixed&quot;, Rate__c,
  &quot;Percentage of BSP+PLC&quot;, Rate__c * Base_Ref_Amount__c / 100,
  &quot;Percentage of Agreement Value&quot;, Rate__c * Base_Ref_Amount__c / 100,
  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>